--- a/pages/about.html
+++ b/pages/about.html
@@ -16,7 +16,7 @@
         <a class="navbar-brand" href="#">
 					      <img src="../images/bt-logo-removebg-preview.png" alt="rajeshdas.com"><span class="fs-6">Blue Thrive <br>Solution</span>
 					    </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar icon-bar-1"></span>
                         <span class="icon-bar icon-bar-2"></span>
                         <span class="icon-bar icon-bar-3"></span>
