--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="container-fluid" id="cont1">
       <nav class="navbar navbar-expand-lg main-nav px-0">
         <a class="navbar-brand" href="#">
-					      <img src="./images/bt-logo-removebg-preview.png" alt="rajeshdas.com"><span class="fs-6">Blue Thrive <br>Solution</span>
+					      <img src="../images/bt-logo-removebg-preview.png" alt="rajeshdas.com"><span class="fs-6">Blue Thrive <br>Solution</span>
 					    </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar icon-bar-1"></span>
                         <span class="icon-bar icon-bar-2"></span>
                         <span class="icon-bar icon-bar-3"></span>
@@ -24,13 +24,13 @@
         <div class="collapse navbar-collapse" id="mainMenu">
           <ul class="navbar-nav ml-auto text-uppercase f1">
             <li>
-              <a href="./index.html" class="active active-first">home</a>
+              <a href="../index.html" class="active active-first">home</a>
             </li>
             <li>
               <a href="./pages/about.html">about us</a>
             </li>
             <li>
-              <a href="#service">services</a>
+              <a href="./services.html">services</a>
             </li>
             <li>
               <a href="#project">projects</a>
@@ -42,12 +42,15 @@
               <a href="#testimony">testimonils</a>
             </li>
             <li>
-              <a href="./pages/contact.html">contact</a>
+              <a href="../pages/contact.html">Contact us</a>
+            </li>
+            <li>
             </li>
           </ul>
         </div>
       </nav>
     </div>
+    
     <!-- /.container -->
     <div class="px-4 py-2 my-5 text-center">
         <h1 class="display-5 fw-bold textw">Empowering <span style="color:#03CBF0">Your</span> Digital Journey</h1>
