--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container-fluid" id="cont1">
       <nav class="navbar navbar-expand-lg main-nav px-0">
         <a class="navbar-brand" href="#">
-					      <img src="../images/bt-logo-removebg-preview.png" alt="rajeshdas.com"><span class="fs-6">Blue Thrive <br>Solution</span>
+					      <img src="./images/bt-logo-removebg-preview.png" alt="rajeshdas.com"><span class="fs-6">Blue Thrive <br>Solution</span>
 					    </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar icon-bar-1"></span>
